fixed subheader spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -804,7 +804,8 @@ section {
 .btn-back-to-top {
     position: fixed;
     bottom: 20px;
-    right: 20px;
+    /*right: 20px;*/
+    left: 20px;
     padding: 3px 15px;
     border-radius: 4px;
     font-size: 22px;
@@ -1948,7 +1949,8 @@ ul.navbar-nav > li > a:focus {
 .btn-back-to-top {
     position: fixed;
     bottom: 20px;
-    right: 20px;
+    /*right: 20px;*/
+    left: 20px;
     padding: 3px 15px;
     border-radius: 4px;
     font-size: 22px;
